Кнопка перехода в поиск картинок Яндекса

--- a/templates/_admin/flickr.import.sm.html
+++ b/templates/_admin/flickr.import.sm.html
@@ -57,7 +57,8 @@
     <br />
     <input type="hidden" id="flickr-search-points-latitude" />
     <input type="hidden" id="flickr-search-points-longitude" />
-    <input type="button" id="flickr-search-points-go" value="Перейти" disabled="disabled" />
+    <input type="button" id="flickr-search-points-go" value="Flickr" disabled="disabled" />
+    <input type="button" id="flickr-search-points-go-yandex" value="Яндекс" disabled="disabled" />
 </div>
 
 
