--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -17,6 +17,7 @@
         <meta name="robots" content="index, follow"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="revisit-after" content="7 days"/>
+        <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
         <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
         <link rel="search" href="/search/"/>
@@ -24,13 +25,11 @@
         {if $page->canonical}
             <link rel="canonical" href="https://culttourism.ru{$page->canonical}"/>
         {/if}
-        <script src='https://www.google.com/recaptcha/api.js'></script>
+        <script type="text/javascript" src="https://www.google.com/recaptcha/api.js" defer="defer"></script>
         <script type="text/javascript"
                 src="https://api-maps.yandex.ru/2.1/?apikey=74d288bb-04a5-43b1-bf52-e90eeccd2683&lang=ru_RU&coordorder=longlat"
                 defer="defer"></script>
-        <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
-        <script type="text/javascript" src="https://yastatic.net/pcode-native/loaders/loader.js" async></script>
-        <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="defer"></script>
+        <script type="text/javascript" src="https://yastatic.net/pcode-native/loaders/loader.js" defer="defer"></script>
         {if $page->user.userid}
             <script type="text/javascript" src="/addons/ckeditor/ckeditor.js" defer="defer"></script>
             <script type="text/javascript" src="/addons/ckeditor/adapters/jquery.js" defer="defer"></script>
@@ -39,6 +38,7 @@
             <script type="text/javascript" src="/addons/jquery.ui/jquery.ui.datepicker-ru.js" defer="defer"></script>
             <link rel="stylesheet" href="/addons/jquery.ui/ui-lightness/jquery-ui-1.8.2.custom.css" type="text/css"/>
         {/if}
+        <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="defer"></script>
         {if !empty($page->getJSONLD())}
             <script type="application/ld+json">
                         {json_encode($page->getJSONLD())}
