Вынес js страниц редактирования в отдельный файл

--- a/templates/_pages/pagecity.edit.sm.html
+++ b/templates/_pages/pagecity.edit.sm.html
@@ -1,3 +1,4 @@
+<script type="text/javascript" src="/js/editor.js" defer="defer"></script>
 <input type="hidden" id="pc_id" value="{$city.pc_id}" />
 <input type="text" id="pc_title_edit" class="hiddenedit h1" value="{$city.pc_title}" />
 <input type="hidden" id="pc_title_hidd" value="{$city.pc_title}" />
