--- a/templates/search/search.sm.html
+++ b/templates/search/search.sm.html
@@ -24,7 +24,7 @@
     <a href="?page={$meta.page - 1}&q={$meta.query}">&#8592; предыдущая</a>
     {/if}
     страница {$meta.page + 1}
-    {if ($meta.pages_all > ($meta.page + 1) * $meta.pages)}
+    {if ($meta.pages_all > ($meta.page + 1) * $meta.per_page)}
     <a href="?page={$meta.page + 1}&q={$meta.query}">следующая &#8594;</a>
     {/if}
 </p>
