Страница загрузки фотографий для точек

--- a/templates/_admin/photos.list.sm.html
+++ b/templates/_admin/photos.list.sm.html
@@ -3,6 +3,7 @@
 
 <div id="photos-to-flickr" class="photos-block">
     <a href="./flickr.php">Импорт из Flickr</a>
+    <a href="./photos_import.php">Импорт фото</a>
 </div>
 
 <div id="photos-upload" class="photos-block">
