Интерфейс поиск картинок с кнопками

--- a/css/admin/photos_import.css
+++ b/css/admin/photos_import.css
@@ -5,3 +5,31 @@
 .photos-menu-block a {
     color: #87CEEB;
 }
+#photos-page-container {
+    position : relative;
+}
+
+#photos-objects-suggestions {
+    width: 500px;
+    font-size: 13px;
+}
+.photos-objects-suggestion {
+    color: #009FD4;
+    cursor: pointer;
+}
+
+#photos-object-detail {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 800px;
+    min-height: 200px;
+    font-size: 14px;
+    display: none;
+}
+#photos-object-detail-region {
+    font-style: italic;
+}
+#photos-object-detail-title {
+    font-weight: bold;
+}
