--- a/css/admin/photos_import.css
+++ b/css/admin/photos_import.css
@@ -9,6 +9,7 @@
 
 #photos-page-container {
     position : relative;
+    margin   : 5px;
 }
 
 #photos-objects-suggestions {
@@ -21,14 +22,18 @@
     cursor : pointer;
 }
 
+.photos-objects-suggestion.m_selected {
+    font-weight : bold;
+}
+
 #photos-object-detail {
-    position   : absolute;
-    top        : 0;
-    right      : 0;
-    width      : 1000px;
-    min-height : 200px;
-    font-size  : 14px;
-    display    : none;
+    position    : absolute;
+    top         : 0;
+    right       : 0;
+    margin-left : 500px;
+    min-height  : 200px;
+    font-size   : 14px;
+    display     : none;
 }
 
 #photos-object-detail-region {
@@ -47,25 +52,29 @@
 #photos-object-detail-preview {
     display       : none;
     margin-bottom : 10px;
-    padding: 5px;
+    padding       : 5px;
     text-align    : center;
-    border: 1px solid #bbbbbb;
+    border        : 1px solid #bbbbbb;
 }
 
-#photos-object-detail-preview img {
+.photos-object-detail-preview-image {
     height  : 400px;
     display : block;
-    margin: 0 auto;
+    margin: 4px auto;
 }
 
-#photos-object-detail-preview button {
-    display : block;
+.photos-object-detail-link {
+    color: #009FD4;
+}
+
+.photos-object-detail-process {
+    margin: 4px auto;
 }
 
 .photos-object-detail-result-variant {
     position   : relative;
     display    : inline-block;
-    height     : 146px;
+    height     : 115px;
     width      : 150px;
     margin     : 2px;
     padding    : 2px;
@@ -74,10 +83,11 @@
     overflow   : hidden;
 }
 
-.photos-object-detail-result-variant img {
+.photos-object-detail-result-variant-img {
     max-height : 110px;
     margin     : 0 auto;
     overflow   : hidden;
+    cursor     : pointer;
 }
 
 .photos-object-detail-result-variant-title {
@@ -110,34 +120,9 @@
     white-space : nowrap;
     position    : absolute;
     top         : 15px;
+    left        : 5px;
     opacity     : 0.7;
     background  : #ffffff;
-}
-
-.photos-object-detail-result-variant-import {
-    display         : block;
-    position        : absolute;
-    bottom          : 1px;
-    left            : 65px;
-    width           : 20px;
-    height          : 20px;
-    border          : none;
-    background      : url("/img/btn/import.png");
-    background-size : contain;
-    cursor          : pointer;
-}
-
-.photos-object-detail-result-variant-info {
-    display         : block;
-    position        : absolute;
-    bottom          : 1px;
-    right           : 1px;
-    width           : 20px;
-    height          : 20px;
-    border          : none;
-    background      : url("/img/btn/info.png");
-    background-size : contain;
-    cursor          : pointer;
 }
 
 #photos-object-search {
