--- a/css/admin/links.css
+++ b/css/admin/links.css
@@ -19,7 +19,9 @@
 }
 
 .links-redirect-process {
-    color: #004C96;
-    border-bottom: 1px dotted #004C96;
+    cursor: pointer;
+}
+
+.links-delete-process {
     cursor: pointer;
 }
