Редактирование ссылок в списке

--- a/css/admin/links.css
+++ b/css/admin/links.css
@@ -2,9 +2,20 @@
     font-weight: bold;
 }
 
+.table-cell-url {
+    position: relative;
+}
+
 .links-content-title {
     font-style: italic;
     color: #5e5e5e;
+}
+
+.point-address {
+    display: block;
+    font-size: 80%;
+    font-style: italic;
+    color: #555555;
 }
 
 .status-fatal {
@@ -28,5 +39,13 @@
 }
 
 .links-delete-process {
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.links-edit-process {
+    position: absolute;
+    right: 2px;
+    top: 2px;
     cursor: pointer;
 }
