--- a/css/common-modules.css
+++ b/css/common-modules.css
@@ -565,6 +565,7 @@ textarea.feedinput {
     margin-top:-1.1em;
     top:0;
     bottom:0;
+    margin-bottom: 7px;
     overflow-y: scroll;
 }
 #object_text {
@@ -573,9 +574,9 @@ textarea.feedinput {
 #object_additional {
     position:absolute;
     bottom:0;
-    left:30px;
-    right:30px;
-    border-top:1px solid #afafaf;
+    left: 2px;
+    right: 2px;
+    border-top: 1px solid #afafaf;
     background: #fff;
 }
 #object_gps {
