--- a/templates/_pages/pagepoint.sm.html
+++ b/templates/_pages/pagepoint.sm.html
@@ -1,11 +1,13 @@
 <h1>{$object.pt_name}</h1>
 <div id="city_path">{$city.pc_pagepath}</div>
+
 {if $object.pt_latitude && $object.pt_longitude}
 <div id="map_container">
     <div id="city_map" style="{if $page_image}background-image: url({$page_image});{/if}"></div>
     <div id="point_gps">GPS-координаты: {$object.gps_dec}</div>
 </div>
 {/if}
+
 <div id="object_description">
     <img id="object_icon" alt="{$object.tp_name}" title="{$object.tp_name}" src="/img/points/x32/{$object.tp_icon}" />
     {$object.pt_description}
@@ -17,7 +19,7 @@
         {/foreach}
     </ul>
     {/if}
-    
+
     <p><a href="." id="page_point_link_back" title="перейти к достопримечательностям {$city.pc_inwheretext}">&larr; достопримечательности {$city.pc_inwheretext}</a></p>
 </div>
 <div id="widget_photos"></div>
@@ -47,13 +49,7 @@
         {if $object.pt_website}
         <li>
             <img src="/img/ico/ico.web.png" alt="сайт" title="Сайт" class="textmarker" />
-            <a href="{$object.pt_website}" class="object_contacts_web">{$object.pt_website}</a>
-        </li>
-        {/if}
-        {if $object.pt_email}
-        <li>
-            <img src="/img/ico/ico.email.png" alt="e-mail" title="Электронная почта" class="textmarker" />
-            <a href="mailto:{$object.pt_email}" class="object_contacts_email">{$object.pt_email}</a>
+            <a href="{$object.pt_website}" rel="nofollow" class="object_contacts_web">{$object.pt_website}</a>
         </li>
         {/if}
     </ul>
@@ -72,6 +68,7 @@
 <input type="hidden" id="pan_ne_lat" value="{$object.sw_ne.ne.lat}" />
 <input type="hidden" id="pan_ne_lon" value="{$object.sw_ne.ne.lon}" />
 {/if}
+
 <div style="height:25px;overflow:hidden;margin: 10px;">
     <script type="text/javascript" src="https://yandex.st/share/share.js" charset="utf-8" defer="defer"></script>
     <div class="yashare-auto-init" data-yashareL10n="ru" data-yashareType="none" data-yashareQuickServices="vkontakte,facebook,twitter,odnoklassniki,gplus"></div> 
