--- a/css/admin/photos_import.css
+++ b/css/admin/photos_import.css
@@ -1,70 +1,70 @@
 .photos-menu-block {
-    padding       : 5px;
-    border-bottom : 1px solid #87CEEB;
+    padding: 5px;
+    border-bottom: 1px solid #87ceeb;
 }
 
 .photos-menu-block a {
-    color : #87CEEB;
+    color: #87ceeb;
 }
 
 #photos-page-container {
-    position : relative;
-    margin   : 5px;
+    position: relative;
+    margin: 5px;
 }
 
 #photos-objects-suggestions {
-    width     : 500px;
-    font-size : 13px;
+    width: 500px;
+    font-size: 13px;
 }
 
 .photos-objects-suggestion {
-    color  : #009FD4;
-    cursor : pointer;
+    color: #009fd4;
+    cursor: pointer;
 }
 
 .photos-objects-suggestion.m_selected {
-    font-weight : bold;
+    font-weight: bold;
 }
 
 #photos-object-detail {
-    position    : absolute;
-    top         : 0;
-    right       : 0;
-    margin-left : 500px;
-    min-height  : 200px;
-    font-size   : 14px;
-    display     : none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-left: 500px;
+    min-height: 200px;
+    font-size: 14px;
+    display: none;
 }
 
 #photos-object-detail-region {
-    font-style : italic;
+    font-style: italic;
 }
 
 #photos-object-detail-title {
-    font-weight : bold;
+    font-weight: bold;
 }
 
 #photos-object-detail-results {
-    margin  : 5px;
-    padding : 5px;
+    margin: 5px;
+    padding: 5px;
 }
 
 #photos-object-detail-preview {
-    display       : none;
-    margin-bottom : 10px;
-    padding       : 5px;
-    text-align    : center;
-    border        : 1px solid #bbbbbb;
+    display: none;
+    margin-bottom: 10px;
+    padding: 5px;
+    text-align: center;
+    border: 1px solid #bbbbbb;
 }
 
 .photos-object-detail-preview-image {
-    height  : 400px;
-    display : block;
+    height: 400px;
+    display: block;
     margin: 4px auto;
 }
 
 .photos-object-detail-link {
-    color: #009FD4;
+    color: #009fd4;
 }
 
 .photos-object-detail-process {
@@ -72,63 +72,63 @@
 }
 
 .photos-object-detail-result-variant {
-    position   : relative;
-    display    : inline-block;
-    height     : 115px;
-    width      : 150px;
-    margin     : 2px;
-    padding    : 2px;
-    border     : 1px solid #bbbbbb;
-    text-align : center;
-    overflow   : hidden;
+    position: relative;
+    display: inline-block;
+    height: 115px;
+    width: 150px;
+    margin: 2px;
+    padding: 2px;
+    border: 1px solid #bbbbbb;
+    text-align: center;
+    overflow: hidden;
 }
 
 .photos-object-detail-result-variant-img {
-    max-height : 110px;
-    margin     : 0 auto;
-    overflow   : hidden;
-    cursor     : pointer;
+    max-height: 110px;
+    margin: 0 auto;
+    overflow: hidden;
+    cursor: pointer;
 }
 
 .photos-object-detail-result-variant-title {
-    font-size   : 11px;
-    display     : block;
-    overflow    : hidden;
-    max-width   : 140px;
-    white-space : nowrap;
+    font-size: 11px;
+    display: block;
+    overflow: hidden;
+    max-width: 140px;
+    white-space: nowrap;
 }
 
 .photos-object-detail-result-variant-domain {
-    font-size   : 11px;
-    display     : block;
-    overflow    : hidden;
-    max-width   : 110px;
-    padding     : 1px;
-    white-space : nowrap;
-    position    : absolute;
-    top         : 1px;
-    left        : 10px;
-    opacity     : 0.7;
-    background  : #ffffff;
+    font-size: 11px;
+    display: block;
+    overflow: hidden;
+    max-width: 110px;
+    padding: 1px;
+    white-space: nowrap;
+    position: absolute;
+    top: 1px;
+    left: 10px;
+    opacity: 0.7;
+    background: #ffffff;
 }
 
 .photos-object-detail-result-variant-size {
-    font-size   : 11px;
-    display     : block;
-    overflow    : hidden;
-    max-width   : 140px;
-    white-space : nowrap;
-    position    : absolute;
-    top         : 15px;
-    left        : 5px;
-    opacity     : 0.7;
-    background  : #ffffff;
+    font-size: 11px;
+    display: block;
+    overflow: hidden;
+    max-width: 140px;
+    white-space: nowrap;
+    position: absolute;
+    top: 15px;
+    left: 5px;
+    opacity: 0.7;
+    background: #ffffff;
 }
 
 #photos-object-search {
-    display : none;
+    display: none;
 }
 
 #photos-object-clear {
-    display : none;
+    display: none;
 }
