--- a/css/admin/links.css
+++ b/css/admin/links.css
@@ -28,6 +28,10 @@
     position: relative;
 }
 
+.table-cell-point {
+    position: relative;
+}
+
 .links-content-title {
     font-style: italic;
     color: #5e5e5e;
@@ -70,4 +74,12 @@
     right: 2px;
     top: 2px;
     cursor: pointer;
+}
+
+.links-disable-process {
+    position: absolute;
+    right: 2px;
+    top: 10px;
+    cursor: pointer;
+    max-width: 16px;
 }
