Добавил отступ в кнопку перехода к Яндексу

--- a/css/admin/links.css
+++ b/css/admin/links.css
@@ -60,6 +60,10 @@
     background-color: #daf8ca !important;
 }
 
+.links-go-yandex {
+    margin-right: 22px;
+}
+
 .links-redirect-process {
     cursor: pointer;
 }
