Добавил canonical в списки

--- a/templates/list/list.sm.html
+++ b/templates/list/list.sm.html
@@ -1,5 +1,5 @@
 <div class="list-half-left">
-    {$list.data.ls_text}
+    {$list.ls_text}
 </div>
 
 <ul class="list-half-right">
@@ -10,6 +10,6 @@
 
 <div style="clear:both;"></div>
 
-<h2>{$list.data.ls_title} на карте</h2>
+<h2>{$list.ls_title} на карте</h2>
 <div id="list-map" class="list-map"></div>
-<input type="hidden" id="list-id" value="{$list.data.ls_id}" />
+<input type="hidden" id="list-id" value="{$list.ls_id}" />
