Вынес js и css в общий конфиг

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -17,11 +17,11 @@
         <meta name="robots" content="index, follow"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta name="revisit-after" content="7 days"/>
-        <link rel="stylesheet" href="/css/{$page->mainfile_css}" type="text/css" media="screen, projection, print"/>
+        <link rel="stylesheet" href="/css/{$pageContent->getUrlCss()}" type="text/css" media="screen, projection, print"/>
         <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
         <link rel="search" href="/search/"/>
-        <link rel="alternate" href="{$page->globalsettings.main_rss}" type="application/rss+xml" title="RSS blog"/>
+        <link rel="alternate" href="{$pageContent->getUrlRss()}" type="application/rss+xml" title="RSS blog"/>
         {if $page->canonical}
             <link rel="canonical" href="https://culttourism.ru{$page->canonical}"/>
         {/if}
@@ -30,7 +30,7 @@
                 src="https://api-maps.yandex.ru/2.1/?apikey=74d288bb-04a5-43b1-bf52-e90eeccd2683&lang=ru_RU&coordorder=longlat"
                 defer="defer"></script>
         <script type="text/javascript" src="https://yastatic.net/pcode-native/loaders/loader.js" defer="defer"></script>
-        <script type="text/javascript" src="/js/{$page->mainfile_js}" defer="defer"></script>
+        <script type="text/javascript" src="/js/{$pageContent->getUrlJs()}" defer="defer"></script>
         {if $page->user.userid}
             <script type="text/javascript" src="/addons/ckeditor/ckeditor.js" defer="defer"></script>
             <script type="text/javascript" src="/addons/ckeditor/adapters/jquery.js" defer="defer"></script>
