--- a/templates/_main/api.html.sm.html
+++ b/templates/_main/api.html.sm.html
@@ -5,9 +5,9 @@
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <title>{$page->title}</title>
-        <meta name="title" content="{$page->title}">
-        <meta name="keywords" content="{$page->keywords}">
-        <meta name="description" content="{$page->description}">
+        <meta name="title" content="{$pageContent->getHead()->getTitle()}">
+        <meta name="keywords" content="{$pageContent->getHead()->getKeywords()|escape:"html"}">
+        <meta name="description" content="{$pageContent->getHead()->getDescription()|escape:"html"}">
         <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <script type="text/javascript" src="http://yandex.st/jquery/1.7.2/jquery.min.js"></script>
