Формирование контента в отдельном поле отдельного класса

--- a/templates/_main/api.html.sm.html
+++ b/templates/_main/api.html.sm.html
@@ -17,5 +17,5 @@
         <link type="text/css" rel="stylesheet" href="/css/ui-lightness/jquery-ui-1.8.2.custom.css">
         <link type="text/css" rel="stylesheet" href="/css/api.css?v={$page->files_ver}">
     </head>
-    <body>{$page->content}</body>
+    <body>{$pageContent->getBody()}</body>
 </html>
